InterOrgComparer/src/objects/Child_Relationship__c.object
<CustomObject>
    <description>Custom object to store the child relationship metadata information associated with a master.</description>
    <fields>
        <fullName>Child_Object__c</fullName>
        <description>API name of the child object.</description>
        <inlineHelpText>API name of the child object.</inlineHelpText>
        <label>Child Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Object__c</fullName>
        <description>Master-Detail relationship between this object and Object Information.</description>
        <inlineHelpText>Master-Detail relationship between this object and Object Information.</inlineHelpText>
        <label>Parent Object</label>
        <referenceTo>Object_Information__c</referenceTo>
        <relationshipLabel>Child Relationships</relationshipLabel>
        <relationshipName>Child_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Relationship_Field_Name__c</fullName>
        <description>API name of the field used to define master-detail relationship.</description>
        <inlineHelpText>API name of the field used to define master-detail relationship.</inlineHelpText>
        <label>Relationship Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Name__c</fullName>
        <description>Name of the relationship.</description>
        <inlineHelpText>Name of the relationship.</inlineHelpText>
        <label>Relationship Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Used to determine whether the relationship is master-detail or lookup.</description>
        <inlineHelpText>Used to determine whether the relationship is master-detail or lookup.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lookup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master-Detail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Child Relationship</label>
    <nameField>
        <displayFormat>REL-{000000}</displayFormat>
        <label>Child Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Child Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>